--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "he": "^1.2.0",
     "html2canvas": "^1.4.1",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
