--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-phone-number-input": "^3.4.10",
     "react-router-dom": "^6.26.0",
     "react-swipeable": "^7.0.1",
     "sharp": "^0.33.5",
